// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandCollapseOnlyModifierButtons renders per snapshot 1`] = `
<DocumentFragment>
  <div
    class="cardsVisualizationModifiersContainer"
  >
    <mock-expandcollapseallbutton
      allcardscollapsed="true"
      cardselectionmessagecreator="[object Object]"
      visualhelperenabled="true"
    />
  </div>
</DocumentFragment>
`;

exports[`ExpandCollapseVisualHelperModifierButtons renders per snapshot 1`] = `
<DocumentFragment>
  <div
    class="cardsVisualizationModifiersContainer"
  >
    <mock-expandcollapseallbutton
      allcardscollapsed="true"
      cardselectionmessagecreator="[object Object]"
      visualhelperenabled="true"
    />
    <div
      class="ms-Toggle is-checked is-enabled visualHelperToggle root-109"
    >
      <label
        class="ms-Label ms-Toggle-label label-115"
        for="Toggle0"
        id="Toggle0-label"
      >
        Visual helper
      </label>
      <div
        class="ms-Toggle-innerContainer container-111"
      >
        <button
          aria-checked="true"
          aria-labelledby="Toggle0-label"
          class="ms-Toggle-background pill-112"
          data-is-focusable="true"
          data-ktp-target="true"
          id="Toggle0"
          role="switch"
          type="button"
        >
          <span
            class="ms-Toggle-thumb thumb-113"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
